fix(css): change z-index stacking for modals again

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -16,8 +16,8 @@ body {
   --screen-container-z-index: 2;
   --hover-panel-z-index: 99;
   --dynamic-panel-z-index: 100;
-  --va-modal-z-index: 110;
-  --window-z-index: 200;
+  --window-z-index: 150;
+  --va-modal-z-index: 170;
   --window-top-tier-z-index: 201;
 
   overflow-x: clip;
